# Copyright by The HDF Group.
# All rights reserved.

# Allen Byrne, Ed Hartnett

AC_PREREQ(2.59)
AC_INIT(H5BZ2, 0.1, help@hdfgroup.org)
AC_CONFIG_MACRO_DIR([m4])

## AM_INIT_AUTOMAKE takes a list of options that should be applied to
## every Makefile.am when automake is run.
AM_INIT_AUTOMAKE([foreign serial-tests])
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_CANONICAL_HOST

# Initialize libtool, checking for dlopen.
LT_INIT(dlopen)

## Is the bzip2 library present?
AC_CHECK_HEADERS([bzlib.h], [], [AC_MSG_ERROR([bzlib.h is required, set CPPFLAGS.])])

AC_CHECK_LIB([bz2], [BZ2_bzCompress], [], [AC_MSG_ERROR([libbz is required, set LDFLAGS.])])

# We need the math library
AC_CHECK_LIB([m], [floor], [], [AC_MSG_ERROR([Math library is required.])])

AC_CHECK_HEADERS([hdf5.h], [], [AC_MSG_ERROR([hdf5.h is required, set CPPFLAGS.])])
AC_SEARCH_LIBS([H5Fflush], [hdf5dll hdf5], [], [AC_MSG_ERROR([libhdf5 is required, set LDFLAGS.])])
#AC_SEARCH_LIBS([H5DSis_scale], [hdf5_hldll hdf5_hl], [], [AC_MSG_ERROR([libhdf5_hl is required, set LDFLAGS.])])

## Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h])

## Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

## Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([memset])

## Check which plugins to build, if no environmental variables are set, build
## all.
if test ! "$PLUGIN_H5BZ2"
then
  PLUGIN_H5BZ2=1
fi
AM_CONDITIONAL(H5BZ2, test "$PLUGIN_H5BZ2")

## These files will be generated by configure.
AC_CONFIG_FILES([Makefile
        example/Makefile
        src/Makefile])

## Output configure and all Makefile.in files.
AC_OUTPUT
